change name of title

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <script src="vega_lite_vis.js"></script>
     
-    <title>Homework Week 9</title>
+    <title>Homework Week 9 Map</title>
 
 </head>
 
 <body>
 
-    <h1>Homework Week 9</h1>
+    <h1>Homework Week 9 Map</h1>
 
     <div id="map">
 
